[gd_scene load_steps=2 format=3 uid="uid://by4f1iohgvmfd"]

[ext_resource type="Script" path="res://Components/HitBoxComponent/HitBoxComponent.gd" id="1_bt0oi"]

[node name="HitBoxComponent" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_bt0oi")

[node name="CollisionShape" type="CollisionShape2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_hit_box_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_hit_box_body_exited"]
